--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,15 +5,28 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 0.8em;
-  margin: 20px;
+  margin: 30px;
   background: #efefef;
-  color: #3b7793;
+  color: #333;
+}
+
+#main {
+  background: #fff;
+  width: 500px;
+  padding: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h1, h2, h3 {
+  margin-bottom: 15px;
 }
 
 h1 {
-  font-family: Georgia, serif;
-  font-style: italic;
-  text-transform: lowercase;
+  font-family: "museo-slab-1","museo-slab-2", Georgia, serif;
+/*  font-style: italic;*/
+/*  text-transform: lowercase;*/
   font-size: 2.5em;
+  font-weight: 1000;
+  color: #3b7793;
 }
