--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -4,6 +4,9 @@
     :plain
       <script type="text/javascript" src="http://use.typekit.com/jeg2jrz.js"></script>
       <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+    = stylesheet_link_tag 'formtastic'
+    = stylesheet_link_tag 'formtastic_changes'
     = stylesheet_link_tag 'styles'
     
     %title Every Day One Thing
