adding beta signup controller

--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -8,6 +8,7 @@
     = stylesheet_link_tag 'formtastic'
     = stylesheet_link_tag 'formtastic_changes'
     = stylesheet_link_tag 'styles'
+    = stylesheet_link_tag 'awesome_buttons'
     
     %title Every Day One Thing
     
