--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -9,9 +9,17 @@
 
 %p
   Trust us, you'll be the first to know.
+
+- if flash[:message]
+  #flash
+    = flash[:message]
   
 - semantic_form_for @beta_signup do |f|
   - f.inputs do
     = f.input :email_address, :label => 'Email', :required => false
   - f.buttons do
-    = f.commit_button "Sign up"
+    = f.commit_button "Sign up", :button_html => { :class => 'green awesome' }
+    
+%p#beta_count
+  = pluralize(@count, 'person')
+  signed up so far.
