changing copy and styles for beta signup page

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,7 +1,9 @@
-%h1 Every Day One Thing
 
-%p
-  Pithy description goes here. You know you'll like it.
+#catchphrase
+  %h1 Every Day One Thing
+
+  %p
+    Everything you do for your community matters.
   
 %hr/
 
