changing header font to raleway

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -28,7 +28,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-family: "museo-slab-1","museo-slab-2", Georgia, serif;
+  font-family: "raleway-1","raleway-2", Georgia, serif;
 /*  font-style: italic;*/
 /*  text-transform: lowercase;*/
   font-size: 2.5em;
