don't show sign up link on home page if they're logged in

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -6,4 +6,5 @@
     Everything you do for your community matters.
   
   %p
-    = "Please #{link_to 'sign up', signup_path}!"
+    - if !logged_in?
+      = "Please #{link_to 'sign up', signup_path}!"
