--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -17,7 +17,9 @@
     #header
       %ul
         - if logged_in?
-          %li= "Hey there, #{current_user.login}!"
+          %li
+            = avatar(current_user, 20)
+            = "Hey there, #{current_user.login}!"
           %li.last= link_to "Log out", logout_path
         - else
           %li= link_to "Log in", login_path
