--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -8,3 +8,5 @@
   %p
     - if !logged_in?
       = "Please #{link_to 'sign up', signup_path}!"
+    - else
+      = "I #{link_to 'did a thing', post_path}!"
