switching ThingCat to Category, leaving tables alone. also, can now log in with email address or login.

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -20,8 +20,8 @@
     %li.thing
       %span.user_link= link_to thing.user.login, thing.user
       &mdash;
-      %span.category= thing.thing_cat.name
-      %span.points= thing.thing_cat.points
+      %span.category= "#{thing.subcategory.name},"
+      %span.points= "#{thing.subcategory.points} pts."
       %span.text= thing.text
       %span.stats_link= link_to 'my edot stats', thing.user
   
