--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -9,4 +9,4 @@
   - @user.things.each do |thing|
     %li
       = thing.text
-      = "(#{thing.thing_cat.name})"
+      = "(#{thing.subcategory.name})"
