--- a/app/views/things/new.haml
+++ b/app/views/things/new.haml
@@ -3,5 +3,5 @@
 - semantic_form_for @thing do |f|
   - f.inputs do
     = f.input :text, :required => false
-    = f.input :thing_cat, :label => 'Thing', :collection => @cats, :required => false
+    = f.input :subcategory, :label => 'Thing', :collection => @cats, :required => false
   = f.buttons
