--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -7,6 +7,11 @@
   
 %ul
   - @user.things.each do |thing|
+    - cdate = thing.created_at.strftime("%B %d, %I:%M %p")
     %li
       = thing.text
       = "(#{thing.subcategory.name})"
+      = "--"
+      %i
+        = "(#{cdate})"
+
