adding helper to make time pacific time

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -7,7 +7,7 @@
   
 %ul
   - @user.things.each do |thing|
-    - cdate = thing.created_at.strftime("%B %d, %I:%M %p")
+    - cdate = local(thing.created_at).strftime("%B %d, %I:%M %p")
     %li
       = thing.text
       = "(#{thing.subcategory.name})"
