fixing home page link

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -9,7 +9,7 @@
     - if !logged_in?
       = "Please #{link_to 'sign up', signup_path}!"
     - else
-      = "I #{link_to 'did a thing', post_path}!"
+      = "#{link_to 'I did a thing', post_path}!"
 
 %hr/   
       
