--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -3,7 +3,7 @@
 %h2= "#{@user.login}'s page"
 
 %p
-  = "#{@user.login} has done #{pluralize(@user.things.count, 'thing')}!"
+  = "#{@user.login} has done #{pluralize(@user.things.count, 'thing')} and earned #{@user.points} points!"
   
 %ul
   - @user.things.each do |thing|
