--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -117,6 +117,11 @@ ul.plain {
   margin-bottom: 20px;
 }
 
+.users {
+  font-size: 0.8em;
+  margin-bottom: 20px;
+}
+
 .things li {
   margin-bottom: 5px;
 }
