--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -4,11 +4,27 @@
     :plain
       <script type="text/javascript" src="http://use.typekit.com/jeg2jrz.js"></script>
       <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+      <script type="text/JavaScript" src="/javascripts/rounded.js"></script>
+      <script type="text/JavaScript">
+          window.onload = function() {
+              settings = {
+                  tl: { radius: 10 },
+                  tr: { radius: 10 },
+                  bl: { radius: 10 },
+                  br: { radius: 10 },
+                  antiAlias: true,
+                  autoPad: true
+              }
+              var myBoxObject = new curvyCorners(settings, "userComment");
+              myBoxObject.applyCornersToAll();
+          }
+      </script>
 
     = stylesheet_link_tag 'formtastic'
     = stylesheet_link_tag 'formtastic_changes'
     = stylesheet_link_tag 'styles'
     = stylesheet_link_tag 'awesome_buttons'
+    = stylesheet_link_tag 'rounded'
     
     %title Every Day One Thing
     
