adding links to specific things

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -22,7 +22,8 @@
       &mdash;
       %span.category= "#{thing.subcategory.category.name}: #{thing.subcategory.name},"
       %span.points= "#{thing.subcategory.points} pts."
-      %span.text= thing.text  
+      %span.text= thing.text
+      %span.link= link_to '&#x2192;', thing  
 
 %h3 Top Do Gooders
 
