--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -142,3 +142,9 @@ select {
   text-decoration: none;
   border-bottom: 1px dotted #aaa;
 }
+
+.thing .link a:hover {
+  color: #666;
+  text-decoration: underline;
+  border-bottom: none;
+}
