--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,3 +1,6 @@
+:erb
+  <%= periodically_call_remote :update => 'recent', :frequency => '5', :url => feeds_path, :method => :get %>
+
 
 #catchphrase
   %h1 Every Day One Thing
@@ -11,23 +14,5 @@
     - else
       = "#{link_to 'I did a thing', post_path}!"
 
-%hr/   
-      
-%h3 Recent Things
-
-%ul.plain.things
-  - @latest_things.each do |thing|
-    %li.thing
-      %span.user_link= link_to thing.user.login, thing.user
-      &mdash;
-      %span.category= "#{thing.subcategory.category.name}: #{thing.subcategory.name},"
-      %span.points= "#{thing.subcategory.points} pts."
-      %span.text= thing.text
-      %span.link= link_to '&#x2192;', thing  
-
-%h3 Top Do Gooders
-
-%ul.plain.users
-  - @top_users.each do |u|
-    %li= "#{link_to(u.login, u)}: #{u.points} pts"
-   
+#recent
+  = render :partial => 'feeds'
