--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -19,6 +19,8 @@
               myBoxObject.applyCornersToAll();
           }
       </script>
+      
+    = javascript_include_tag 'prototype'
 
     = stylesheet_link_tag 'formtastic'
     = stylesheet_link_tag 'formtastic_changes'
@@ -44,9 +46,10 @@
     #main
       = yield
     
-    #tracker
-      :plain
-        <a title="Web Analytics" href="http://getclicky.com/184306"><img alt="Web Analytics" src="http://static.getclicky.com/media/links/badge.gif" border="0" /></a>
-        <script src="http://static.getclicky.com/js" type="text/javascript"></script>
-        <script type="text/javascript">clicky.init(196401);</script>
-        <noscript><p><img id="clicky-img" alt="Clicky" width="1" height="1" src="http://in.getclicky.com/196401ns.gif" /></p></noscript>
+    - if Rails.env.production?
+      #tracker
+        :plain
+          <a title="Web Analytics" href="http://getclicky.com/184306"><img alt="Web Analytics" src="http://static.getclicky.com/media/links/badge.gif" border="0" /></a>
+          <script src="http://static.getclicky.com/js" type="text/javascript"></script>
+          <script type="text/javascript">clicky.init(196401);</script>
+          <noscript><p><img id="clicky-img" alt="Clicky" width="1" height="1" src="http://in.getclicky.com/196401ns.gif" /></p></noscript>
