--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -53,3 +53,25 @@
           <script src="http://static.getclicky.com/js" type="text/javascript"></script>
           <script type="text/javascript">clicky.init(196401);</script>
           <noscript><p><img id="clicky-img" alt="Clicky" width="1" height="1" src="http://in.getclicky.com/196401ns.gif" /></p></noscript>
+
+    :plain
+      <script type="text/javascript">
+        var uservoiceOptions = {
+          key: 'everyday1thing',
+          host: 'everyday1thing.uservoice.com', 
+          forum: '47005',
+          alignment: 'left',
+          background_color:'#316790', 
+          text_color: 'white',
+          hover_color: '#06c',
+          lang: 'en',
+          showTab: true
+        };
+        function _loadUserVoice() {
+          var s = document.createElement('script');
+          s.src = ("https:" == document.location.protocol ? "https://" : "http://") + "uservoice.com/javascripts/widgets/tab.js";
+          document.getElementsByTagName('head')[0].appendChild(s);
+        }
+        _loadSuper = window.onload;
+        window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); };
+      </script>
