--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -8,7 +8,7 @@
   %p
     How do you add up?
   
-  %p
+  %p.action
     - if !logged_in?
       = "Please #{link_to 'sign up', signup_path}!"
     - else
