--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -53,6 +53,19 @@ a {
   border: 1px solid #ccc;
 }
 
+.home_link {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.4em;
+}
+
+.home_link:hover {
+  text-decoration: underline;
+}
+
 #main {
   background: #fff;
   margin-top: 30px;
