--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -29,11 +29,12 @@
       %ul
         - if logged_in?
           %li
-            = avatar(current_user, 20)
+            = avatar(current_user, 20) unless iphone?
             = "Hey there, #{current_user.login}!"
           %li.last= link_to "Log out", logout_path
         - else
-          %li= link_to "Log in", login_path
+          %li
+            = link_to "Log in", login_path
           %li.last= link_to "Sign up", signup_path
   
     #main
