--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,12 @@
 <h1>Sign up as a new user</h1>
 <% @user.password = @user.password_confirmation = nil %>
 
+<p class="twitter_login">
+  <%= link_to 'Sign up with your Twitter account', twitter_login_path %>
+</p>
+
+<p>...or create an account just for Every Day One Thing.</p>
+
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
 <p><%= label_tag 'login' %><br/>
