adding category totals

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -16,3 +16,9 @@
 
 #recent
   = render :partial => 'feeds'
+  
+%h3 Today's totals
+
+%ul.plain.categories
+  - @todays_totals.each do |t|
+    %li= "#{t[:category].name}: #{t[:total]} pts"
