--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -18,13 +18,18 @@ body {
 #header {
   padding:8px;
   font-size: 0.9em;
-  background: #ccdce6;
+  background: #15598A;
+  color: #fff;
   text-align: right;
   border-bottom: 1px solid #ccc;
 }
 
 a {
   color: #133f59;
+}
+
+#header a {
+  color: #ccc;
 }
 
 #header li {
