--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -3,20 +3,4 @@
 %p
   = "#{@user.login} has done #{pluralize(@user.things.count, 'thing')} and earned #{pluralize(@user.points,'point')}!"
   
-  - @user.things.each do |thing|
-    - cdate = local(thing.created_at).strftime("%B %d, %I:%M %p")
-    - whitespace = /^ *$/
-    - if whitespace.match(thing.text)
-      - usercomment = "&nbsp;"
-    - else
-      - usercomment = thing.text
-    %div.userThings
-      %div.userComment
-        %blockquote
-          %p
-            = usercomment
-      %cite.userComment
-        = "(#{thing.subcategory.name})"
-        = "-"
-        = "(#{cdate})"
-
+  = render :partial => 'things/thing', :collection => @user.things
