--- a/public/stylesheets/rounded.css
+++ b/public/stylesheets/rounded.css
@@ -5,8 +5,7 @@ div.userThings div.userComment {
 	margin-bottom: 10px;
 	border: 3px solid #fff;
 	background-color: #b7e0ff;
-	width: 500px;
-	//margin: 20px;
+	width: 100%;
 	margin-bottom: 15px;
 	margin-top: 15px;
 }
