--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -28,7 +28,7 @@ a img {
 #login {
   font-size: 1.3em;
   margin-top: 35px;
-  width: 200px;
+  width: 300px;
   float: left;
 }
 
@@ -37,14 +37,18 @@ a img {
 }
 
 
+#header a {
+  color: #333;
+}
 
 #header {
   padding:8px;
   font-size: 0.9em;
-  background: #15598A;
   color: #fff;
   text-align: right;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ddd;
+  background: #eee;
+  color: #333;
 }
 
 a {
@@ -52,7 +56,7 @@ a {
 }
 
 #header a {
-  color: #ccc;
+  color: #333;
 }
 
 #header li {
@@ -99,10 +103,10 @@ a {
 
 #main {
   background: #fff;
-  margin-top: 30px;
   margin-bottom: 30px;
-  width: 500px;
+  width: 600px;
   padding: 40px;
+  padding-top: 30px;
   margin-left: auto;
   margin-right: auto;
 }
