--- a/app/views/things/show.haml
+++ b/app/views/things/show.haml
@@ -1,7 +1,6 @@
-%h1= "#{@thing.user.login} did a thing!"
+%h1
+  = link_to @thing.user.login, @thing.user
+  did a thing!
 
-#thing
-  %span.category= "#{@thing.subcategory.category.name}: #{@thing.subcategory.name},"
-  %span.points= "#{@thing.subcategory.points} pts."
-  %span.text= @thing.text
-  %span.time= local(@thing.created_at).strftime("%B %d, %I:%M %p")
+#single_thing
+  = render :partial => 'things/thing'
