--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -130,6 +130,15 @@ h1 {
   margin-bottom: 15px;
 }
 
+h1 a {
+  text-decoration: none;
+  color: #3b7793;
+}
+
+h1 a:hover {
+  border-bottom: 1px solid #3b7793;
+}
+
 p {
   margin-bottom: 10px;
   line-height: 1.6em;
