--- a/public/stylesheets/rounded.css
+++ b/public/stylesheets/rounded.css
@@ -1,38 +1,53 @@
-/* Rounded Bubble */
+#header {
+  background-color: #fff !important;
+}
+
+#main, body {
+  background-color: #f7f7f7 !important;
+}
 
 div.userThings div.userComment {
-	font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
-	margin-bottom: 10px;
-	border: 3px solid #fff;
-	background-color: #b7e0ff;
-	width: 100%;
-	margin-bottom: 15px;
-	margin-top: 15px;
+  font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
+  margin-bottom: 10px;
+  border: 1px solid #127AC2 !important; 
+  border: 1px solid #ccc !important; 
+  background-color: #fff !important;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 div.userThings div.userComment blockquote {
-	font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
-	border: 0;
-	background-color: transparent;
+  font-family: Helvetica, Arial, sans-serif !important;
+  border: 0;
+  background-color: transparent;
 }
 div.userThings div.userComment blockquote p {
-	margin: 0px 5px;
+  margin: 0px 5px;
 }
 
 div.userComment {
   padding: 5px;
   margin-bottom: 5px !important;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
+  -webkit-border-radius: 5px !important;
+  -moz-border-radius: 5px !important;
 }
 
 cite.userComment {
-	font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
-	background: transparent url(/images/tip-rounded.gif) no-repeat 15px 0;
-	position: relative;
-	margin: 0px;
-	padding-left: 35px;
-	padding-top: 10px;
-	font-size: .8em;
-	top: 2px;
+  font-family: Helvetica, Arial, sans-serif !important;
+  font-style: normal;
+  position: relative;
+  margin: 0px;
+  padding-left: 40px !important;
+  padding-top: 10px;
+  font-size: .8em;
+  top: 2px;
+  color: #666;
+  background: transparent url(/images/tip-rounded.gif) no-repeat 15px 0;
+}
+
+cite.userComment a {
+  color: #666;
+  text-decoration: none;
+  border-bottom: 1px solid #ccc;
 }
 
