--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -6,7 +6,6 @@
     :plain
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.1/prototype.js"></script>
       <script type="text/javascript" src="http://use.typekit.com/jeg2jrz.js"></script>
-      <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
       <script type="text/JavaScript" src="/javascripts/rounded.js"></script>
       
 
@@ -24,7 +23,7 @@
     %title= iphone? ? 'EDOT' : 'Every Day One Thing'
     
   %body
-    %a{ :href => root_path }= image_tag "edot-banner-nobackground.png"
+    %a#banner{ :href => root_path }= image_tag "edot-banner-nobackground.png"
     #header
       =# link_to iphone? ? 'home' : 'Every Day One Thing', root_path, :class => 'home_link'
       %ul
