adding photo to things

--- a/app/views/things/_thing.haml
+++ b/app/views/things/_thing.haml
@@ -8,6 +8,7 @@
   %div.userComment
     %blockquote
       %p
+        = avatar(thing.user, 25)
         = usercomment
   %cite.userComment
     = thing.subcategory.name
