--- a/public/stylesheets/rounded.css
+++ b/public/stylesheets/rounded.css
@@ -50,3 +50,11 @@ cite.userComment a {
   border-bottom: 1px solid #ccc;
 }
 
+blockquote p .gravatar {
+  vertical-align: -7px;
+  margin-right: 3px;
+}
+
+blockquote p {
+  margin-left: 1px !important;
+}
