--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -19,15 +19,34 @@
       
 
 - if logged_in?
+  #me
+    #my_feed
+      %h3 Recent things I did
 
-  #my_feed
-    %h3 Recent things I did
+    %ul.plain.things
+      = render :partial => 'things/thing', :collection => current_user.things.find(:all, :limit => 3)
 
-  %ul.plain.things
-    = render :partial => 'things/thing', :collection => current_user.things.find(:all, :limit => 3)
+    #my_totals
+      %h3.add_up My totals
 
-  #my_totals
-    %h3.add_up My totals
+      %ul.plain.categories
+        %table
+          %tr.totals
+            - @todays_totals.each do |t|
+              %td{ :class => t[:total] > 0 ? '' : 'zero' }= t[:total]
+          %tr.categories
+            - @todays_totals.each do |t|
+              %td= t[:category].name
+  
+#everyone{ :class => logged_in? ? 'right' : ''}
+  #global_feed
+    %h3 Recent things we did
+
+    %ul.plain.things
+      = render :partial => 'things/thing', :collection => @latest_things, :locals => { :show_user => true } 
+
+  #global_totals
+    %h3.add_up How we add up
 
     %ul.plain.categories
       %table
@@ -37,22 +56,3 @@
         %tr.categories
           - @todays_totals.each do |t|
             %td= t[:category].name
-  
-
-#global_feed
-  %h3 Recent things we did
-
-  %ul.plain.things
-    = render :partial => 'things/thing', :collection => @latest_things, :locals => { :show_user => true } 
-
-#global_totals
-  %h3.add_up How we add up
-
-  %ul.plain.categories
-    %table
-      %tr.totals
-        - @todays_totals.each do |t|
-          %td{ :class => t[:total] > 0 ? '' : 'zero' }= t[:total]
-      %tr.categories
-        - @todays_totals.each do |t|
-          %td= t[:category].name
