--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -27,7 +27,7 @@
       = render :partial => 'things/thing', :collection => current_user.things.find(:all, :limit => 3)
 
     #my_totals
-      %h3.add_up My totals
+      %h3.add_up My total things
 
       %ul.plain.categories
         %table
