adding blog link

--- a/app/views/layouts/default.haml
+++ b/app/views/layouts/default.haml
@@ -40,6 +40,8 @@
             = link_to "Sign up", signup_path
         %li 
           = link_to 'about', about_path
+        %li 
+          = link_to 'blog', 'http://everydayonething.wordpress.com'
         %li.last 
           %a{ :href => 'http://cafepress.com/everyday1thing' } store
 
