changing about page

--- a/app/views/static/about.haml
+++ b/app/views/static/about.haml
@@ -3,7 +3,7 @@
 #about
   :markdown
     <h2> How we started</h2>      
-    Start-up Seattle Weekend was our meeting point.  Every Day One Thing was a 
+    Startup Weekend Seattle was our meeting point.  Every Day One Thing was a 
     pre-existing blog. After a 90 Second pitch to a room full of developers, 
     designers, and other creative minds, the EDOT was formed.
 
