adding placeholder text if message is blank, adding things page (no link to it yet)

--- a/app/views/things/_thing.haml
+++ b/app/views/things/_thing.haml
@@ -1,15 +1,14 @@
 - cdate = local(thing.created_at).strftime("%B %d, %I:%M %p")
-- whitespace = /^ *$/
-- if whitespace.match(thing.text)
-  - usercomment = "&nbsp;"
-- else
-  - usercomment = thing.text
 %div.userThings
   %div.userComment
     %blockquote
       %p
         = avatar(thing.user, 25)
-        = usercomment
+        - unless thing.text.blank?
+          = thing.text
+        - else
+          %span.blank
+            = "#{thing.user.login} did a thing!"
   %cite.userComment
     = thing.subcategory.name
     = "-"
