adding user link on things page

--- a/app/views/things/index.haml
+++ b/app/views/things/index.haml
@@ -1,1 +1,1 @@
-= render :partial => 'things/thing', :collection => @things
+= render :partial => 'things/thing', :collection => @things, :locals => { :show_user => true }
